Changed to JAVA 8